fix: Correct table column tooltip overflow

--- a/src/Table/table.css
+++ b/src/Table/table.css
@@ -207,6 +207,10 @@
   min-width: 100px;
 }
 
+.columnPopoverContainer {
+  overflow: hidden;
+}
+
 .ellipsisColumn {
   white-space: nowrap;
   overflow: hidden;
